[tool.poetry]
name = "simple-proxy"
version = "0.1.0"
description = ""
authors = ["sound-round <yudaev1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
httpx = "^0.26.0"
modconfig = "^1.2.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest = "^8.0.0"
black = "^24.1.1"
ruff = "^0.2.1"
anyio = "^4.2.0"
pytest-asyncio = "^0.23.5"
trio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_cli = "True"
log_cli_level = "INFO"
